[project]
name = "pycircdb"
version = "0.1.0"
description = "pycircdb: integrated circRNA database annotation for computational workflows."
readme = "README.md"
authors = [{ name = "Barry Digby", email = "b.digby237@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "apache-hamilton[lsp]>=1.90.0",
    "boto3>=1.42.89",
    "click>=8.3.2",
    "polars>=1.39.3",
    "pyyaml>=6.0.3",
    "rich-click>=1.9.7",
    "sf-hamilton[lsp]>=1.89.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "assets", "utils", "utils.*"]

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.package-data]
"*" = ["assets/*.csv"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=utils --cov=config --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["utils", "config.py", "main.py"]
omit = ["tests/*", "venv/*"]
[project.scripts]
pycircdb = "main:cli"

