[project]
name = "pycircdb"
version = "0.1.3"
description = "pycircdb: integrated circRNA database annotation for computational workflows."
readme = "README.md"
authors = [{ name = "Barry Digby", email = "b.digby237@gmail.com" }]
requires-python = ">=3.10.1"
dependencies = [
    "apache-hamilton>=1.90.0",
    "boto3>=1.42.89",
    "click>=8.3.2",
    "polars>=1.39.3",
    "rich-click>=1.9.7"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["assets", "utils", "utils.*"]

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.package-data]
assets = ["*.csv", "*.json", "demo/*"]

[project.scripts]
pycircdb = "main:cli"
